# clawbooks

./: AGENT_GUIDE.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_integrity_audit.py  0003_document_jurisdiction.py  0004_drop_legacy_attachments.py  0005_journal_entry_review_flags.py  0006_fixed_assets.py
clawbooks/: __main__.py  cli.py  config.py  db.py  defaults.py  exceptions.py  integrity.py  ledger.py  legacy_baseline.py  models.py  reports.py  schemas.py  stripe_client.py  tui.py  tui_facade.py  tui_models.py  utils.py
openclaw-cpa-clawbooks-skill/: SKILL.md
tests/: __init__.py  helpers.py  test_accountant_packet.py  test_cli.py  test_integrity.py  test_tui.py  test_tui_facade.py
